...
    
    @IBOutlet weak var backButton: UIButton!
    
    override func viewDidLoad() {
        super.viewDidLoad()
        print("SingleImageViewController loaded")
        backButton.accessibilityIdentifier = "nav back button white"
        imageView.accessibilityIdentifier = "zoomable image"
        print("ImageView accessibility identifier:", imageView.accessibilityIdentifier ?? "No identifier")
        setupScrollView()
        loadFullImage()
        imageView.contentMode = .scaleAspectFit
        scrollView.delegate = self
        
...
