...
                                <rect key="frame" x="37" y="106" width="240" height="128"/>
                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                            </imageView>
                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Psi-YH-FD1">
                                <rect key="frame" x="57" y="356" width="167" height="277"/>
                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                <accessibility key="accessibilityConfiguration" identifier="Authenticate"/>
                                <fontDescription key="fontDescription" name="SFPro-Bold" family="SF Pro" pointSize="15"/>
                                <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
                                <state key="normal" title="Button"/>
                                <connections>
                                    <segue destination="kbi-u0-2vb" kind="show" identifier="ShowWebView" id="zZw-Yd-KpO"/>
                                </connections>
...
                                <rect key="frame" x="118" y="517" width="150" height="4"/>
                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                            </progressView>
                        </subviews>
                        <viewLayoutGuide key="safeArea" id="caJ-xu-IVx"/>
                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                        <accessibility key="accessibilityConfiguration" identifier="UnsplashWebView">
                            <bool key="isElement" value="YES"/>
                        </accessibility>
                    </view>
                    <navigationItem key="navigationItem" id="s5E-62-BvP"/>
                    <connections>
                        <outlet property="progressView" destination="zlG-97-nKw" id="bfa-89-YZk"/>
...
