...
        return formatter
    } ()
    
    override func awakeFromNib() {
        super.awakeFromNib()
        likeButton.addTarget(self, action: #selector(likeButtonPressed), for: .touchUpInside)
        likeButton.accessibilityIdentifier = "like button tapped"
    }
    
    func configure(with photo: Photo) {
        self.photoId = photo.id
        
        cellImage.kf.indicatorType = .activity
...
